--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       <div class="left-nav-2">
         <div class="search">
           <mat-icon class="search-icon">search</mat-icon>
-          <input class ="input-search" type="text" placeholder="Search Products">
+          <input class="input-search" type="text" placeholder="Search Products">
         </div>
       </div>
     </div>
@@ -47,7 +47,8 @@
     <div class="ad-container">
       <div class="ad-text-container">
         <p class="ad-heading">Meet the new design Nike you are wishing for!</p>
-        <p class="ad-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, consequuntur deleniti dolores eos in modi nemo totam voluptates. Quaerat, reiciendis?</p>
+        <p class="ad-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, consequuntur deleniti
+          dolores eos in modi nemo totam voluptates. Quaerat, reiciendis?</p>
         <button class="ad-btn">View Collection</button>
       </div>
       <div class="swipe-left">
@@ -57,10 +58,10 @@
         <mat-icon class="navigatte-next">navigate_next</mat-icon>
       </div>
     </div>
-    </div>
+  </div>
 
 
-<!--  swiper indicator-->
+  <!--  swiper indicator-->
   <div class="swiper-indicator-wrapper">
     <div class="swiper-indicator">
       <div class="swiper-indicator-1 swiper"></div>
@@ -69,19 +70,23 @@
     </div>
   </div>
 
-<!--category section-->
+  <!--category section-->
   <div class="category-wrapper">
     <p class="category-heading">Category</p>
-    <p class="category-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis esse magnam perspiciatis.</p>
+    <p class="category-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis esse magnam
+      perspiciatis.</p>
     <div class="category-card-container">
       <div class="clothing-card">
         <div class="clothing-card-img">
           <div class="large-img">
-            <img class="lg-img" src="https://cdn.pixabay.com/photo/2016/03/27/19/31/fashion-1283863_960_720.jpg" alt="cloth">
+            <img class="lg-img" src="https://cdn.pixabay.com/photo/2016/03/27/19/31/fashion-1283863_960_720.jpg"
+                 alt="cloth">
           </div>
           <div class="small-img">
-            <img class="sm-img" src="https://cdn.pixabay.com/photo/2017/02/08/02/56/booties-2047596_960_720.jpg" alt="cloth">
-            <img class="sm-img" src="https://cdn.pixabay.com/photo/2014/10/27/19/18/baby-shoes-505471_960_720.jpg" alt="cloth">
+            <img class="sm-img" src="https://cdn.pixabay.com/photo/2017/02/08/02/56/booties-2047596_960_720.jpg"
+                 alt="cloth">
+            <img class="sm-img" src="https://cdn.pixabay.com/photo/2014/10/27/19/18/baby-shoes-505471_960_720.jpg"
+                 alt="cloth">
           </div>
         </div>
         <div class="clothing-card-description">
@@ -97,11 +102,13 @@
       <div class="clothing-card">
         <div class="clothing-card-img">
           <div class="large-img">
-            <img class="lg-img" src="https://cdn.pixabay.com/photo/2017/06/21/20/51/tshirt-2428521__340.jpg" alt="cloth">
+            <img class="lg-img" src="https://cdn.pixabay.com/photo/2017/06/21/20/51/tshirt-2428521__340.jpg"
+                 alt="cloth">
           </div>
           <div class="small-img">
             <img class="sm-img" src="https://cdn.pixabay.com/photo/2016/04/01/12/01/cap-1300471__340.png" alt="cloth">
-            <img class="sm-img" src="https://cdn.pixabay.com/photo/2021/11/12/13/14/sweater-6788998__340.jpg" alt="cloth">
+            <img class="sm-img" src="https://cdn.pixabay.com/photo/2021/11/12/13/14/sweater-6788998__340.jpg"
+                 alt="cloth">
           </div>
         </div>
         <div class="clothing-card-description">
@@ -117,10 +124,12 @@
       <div class="clothing-card">
         <div class="clothing-card-img">
           <div class="large-img">
-            <img class="lg-img" src="https://cdn.pixabay.com/photo/2013/07/25/11/52/clothes-166848__340.jpg" alt="cloth">
+            <img class="lg-img" src="https://cdn.pixabay.com/photo/2013/07/25/11/52/clothes-166848__340.jpg"
+                 alt="cloth">
           </div>
           <div class="small-img">
-            <img class="sm-img" src="https://cdn.pixabay.com/photo/2018/05/14/22/08/towels-3401733__340.jpg" alt="cloth">
+            <img class="sm-img" src="https://cdn.pixabay.com/photo/2018/05/14/22/08/towels-3401733__340.jpg"
+                 alt="cloth">
             <img class="sm-img" src="https://cdn.pixabay.com/photo/2019/02/19/18/02/felt-4007361__340.jpg" alt="cloth">
           </div>
         </div>
@@ -145,16 +154,18 @@
     </div>
   </div>
 
-<!--  discount display-->
+  <!--  discount display-->
   <div class="discount-container">
     <div class="discount-img-wrapper">
-      <img class="discount-img" src="https://media.istockphoto.com/photos/white-sneaker-on-a-blue-gradient-background-mens-fashion-sport-shoe-picture-id1303978937?b=1&k=20&m=1303978937&s=170667a&w=0&h=az5Y96agxAdHt3XAv7PP9pThdiDpcQ3otWWn9YuJQRc=" alt="">
+      <img class="discount-img"
+           src="https://media.istockphoto.com/photos/white-sneaker-on-a-blue-gradient-background-mens-fashion-sport-shoe-picture-id1303978937?b=1&k=20&m=1303978937&s=170667a&w=0&h=az5Y96agxAdHt3XAv7PP9pThdiDpcQ3otWWn9YuJQRc="
+           alt="">
     </div>
     <div class="discount-description">
       <p class="discount-title">Get 30% discount on your favourite shoe</p>
-      <p class="discount-sub-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dicta ex harum illum ipsam minima quis sit velit. Doloribus, dolorum!</p>
+      <p class="discount-sub-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dicta ex harum
+        illum ipsam minima quis sit velit. Doloribus, dolorum!</p>
       <button class="discount-btn">View More</button>
     </div>
   </div>
-
 </div>
